--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<!-- <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p> -->
+						<!-- <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -77,22 +77,22 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</div>
+							</div> -->
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
-									<li>
+									<!-- <li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 										1234 Somewhere Rd.<br />
 										Nashville, TN 00000<br />
 										United States
-									</li>
+									</li> -->
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										408-590-7827
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">joshh5790@gmail.com</a>
 									</li>
 								</ul>
 							</div>
