--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Welcome!</h2>
 						</header>
-						<p>I'm a former technical solutions engineer who later found a passion for web development. I have experience building dynamic web applications in JavaScript, Python, and HTML/CSS, and enjoy leveraging the strategic thinking and detail orientation I've gained from my background to come up with innovative solutions.</p>
+						<p>I'm a former technical solutions engineer who discovered his passion for web development. I have experience building dynamic web applications in JavaScript, Python, and HTML/CSS, and enjoy leveraging the strategic thinking and detail orientation I've gained from my background to come up with innovative solutions.</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 						</ul>
@@ -42,8 +42,8 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Air-bee-n-bee</h3>
+								<p>Air-bee-n-bee is an online marketplace and curated collection of short-term homestays and rental experiences.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
