--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/air-bee-n-bee-preview.png" class="image fit thumb"><img src="images/fulls/air-bee-n-bee-preview.png" alt="" /></a>
 								<h3>Air-bee-n-bee</h3>
 								<p>Air-bee-n-bee is an online marketplace and curated collection of short-term homestays and rental experiences.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -54,7 +54,7 @@
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Full Portfolio</a></li> -->
