add link to project

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 								<a href="images/fulls/air-bee-n-bee-preview-1.png" class="image fit thumb"><img src="images/fulls/air-bee-n-bee-preview-1.png" alt="" /></a>
 								<h3>Air-bee-n-bee</h3>
 								<p>Air-bee-n-bee is an online marketplace and curated collection of short-term homestays and rental experiences.</p>
+								<div>
+									<a href="https://air-bee-n-bee.onrender.com/">Live Link</a> |
+									<a href="https://github.com/joshh5790/AirBnBProject">Github</a>
+								</div>
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -423,8 +427,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/joshh5790" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/joshua-ho-5790/" class="icon solid fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
