--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar-2.jpg" alt="" /></a>
-					<h1><strong>I'm Josh</strong>, a forward thinker<br />
-					with a penchant for problem-solving.<br /></h1>
+					<a href="#" class="image avatar"><img src="images/avatar-1.jpg" alt="" /></a>
+					<h1><strong>I'm Josh</strong>, a problem solver<br />
+					with a love for efficiency.<br /></h1>
 				</div>
 			</header>
 
@@ -428,7 +428,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://github.com/joshh5790" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/joshua-ho-5790/" class="icon solid fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/joshua-ho-5790/" class="icon solid fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
