--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar-1.jpg" alt="" /></a>
+					<p class="image avatar"><img src="images/avatar-1.jpg" alt="" /></p>
 					<h1><strong>I'm Josh</strong>, a problem solver<br />
-					with a love for efficiency.<br /></h1>
+					with a passion for efficiency.<br /></h1>
 				</div>
 			</header>
 
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Welcome!</h2>
 						</header>
-						<p>I'm a former technical solutions engineer who discovered his passion for web development. I have experience building dynamic web applications in JavaScript, Python, and HTML/CSS, and enjoy leveraging the strategic thinking and detail orientation I've gained from my background to come up with innovative solutions.</p>
+						<p>I'm a former technical solutions engineer who stumbled upon his passion for web development. I have experience building dynamic web applications in JavaScript, Python, and HTML/CSS, and enjoy leveraging the strategic thinking and detail orientation I've gained from my background to come up with innovative solutions.</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 						</ul>
@@ -428,7 +428,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://github.com/joshh5790" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/joshua-ho-5790/" class="icon solid fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/joshua-ho-5790/" class="icon fa-brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
