--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Projects</h2>
+						<p>NOTE: The hosting site for the projects may take a minute to build the website upon initial load.</p>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/air-bee-n-bee-preview-1.png" class="image fit thumb"><img src="images/fulls/air-bee-n-bee-preview-1.png" alt="" /></a>
