add more projects

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Projects</h2>
-						<p>NOTE: The hosting site for the projects may take a minute to build the website upon initial load.</p>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/air-bee-n-bee-preview-1.png" class="image fit thumb"><img src="images/fulls/air-bee-n-bee-preview-1.png" alt="" /></a>
@@ -50,16 +49,24 @@
 									<a href="https://github.com/joshh5790/AirBnBProject" target="_blank">Github</a>
 								</div>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/repp_thumbnail.png" class="image fit thumb"><img src="images/fulls/repp_thumbnail.png" alt="" /></a>
+								<h3>REPP</h3>
+								<p>An original fullstack React/Flask app offering indie music artists a simple and free alternative to creating personal website.</p>
+								<div>
+									<a href="https://reppofficial.com/" target="_blank">Live Link</a> |
+									<a href="https://github.com/joshh5790/Repp" target="_blank">Github</a>
+								</div>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article> -->
+								<a href="images/fulls/nomnomride_thumbnail.png" class="image fit thumb"><img src="images/fulls/nomnomride_thumbnail.png" alt="" /></a>
+								<h3>Nomnomride</h3>
+								<p>A React/Flask clone of the UberEats website. I collaborated with a group of web developers and built the cart section, accounts section, and search function.</p>
+								<div>
+									<a href="https://nomnomride.onrender.com/" target="_blank">Live Link</a> |
+									<a href="https://github.com/kyleseeley/NomNomRide" target="_blank">Github</a>
+								</div>
+							</article>
 						</div>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Full Portfolio</a></li> -->
