--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Welcome!</h2>
 						</header>
-						<p>I'm a former technical solutions engineer who stumbled upon his love for web development. I have experience building dynamic web applications in JavaScript, Python, and HTML/CSS, and enjoy leveraging the strategic thinking and detail orientation I've gained from my background to come up with innovative solutions.</p>
+						<p>I'm a detail-oriented IT professional with a passion for problem-solving and providing efficient solutions.</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 						</ul>
